# ml-kem

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bench_result_on_Linux_6.11.0-19-generic_x86_64_with_g++_14.json  bench_result_on_Linux_6.11.0-9-generic_x86_64_with_g++_14.json  bench_result_on_Linux_6.6.51+rpt-rpi-v8_aarch64_with_g++_12.json  bench_result_on_Linux_6.8.0-1016-aws_aarch64_with_g++_13.json  bench_result_on_Linux_6.8.0-1021-aws_aarch64_with_g++_13.json  test_kat.sh
.github/: dependabot.yml
.github/workflows/: test_ci.yml
bench/: README.md  main.cpp
benchmarks/: bench.mk  bench_helper.hpp  bench_kem.cpp  bench_ml_kem.cpp  bench_ml_kem_1024.cpp  bench_ml_kem_512.cpp  bench_ml_kem_768.cpp  main.cpp  x86_64_cpu_ticks.hpp
example/: kem.cpp  kyber512_kem.cpp  kyber512_pke.cpp  pke.cpp
examples/: CMakeLists.txt  README.md  example.mk  kyber512_kem.cpp  ml_kem_768.cpp
include/: bench_compression.hpp  bench_ff.hpp  bench_kem_kyber.hpp  bench_kyber.hpp  bench_ntt.hpp  bench_pke_kyber.hpp  bench_sampling.hpp  bench_serialize.hpp  bench_utils.hpp  compression.hpp  decapsulation.hpp  decryption.hpp  encapsulation.hpp  encryption.hpp  ff.hpp  field.hpp  kem.hpp  kem_keygen.hpp  keygen.hpp  kyber.hpp  kyber1024_kem.hpp  kyber1024_pke.hpp  kyber512_kem.hpp  kyber512_pke.hpp  kyber768_kem.hpp  kyber768_pke.hpp  kyber_kem.hpp  kyber_pke.hpp  ntt.hpp  params.hpp  pke.hpp  pke_keygen.hpp  poly_vec.hpp  prng.hpp  sampling.hpp  serialize.hpp  test_cca_kem.hpp  test_compression.hpp  test_cpa_pke.hpp  test_ff.hpp  (+4 more)
include/bench/: bench_common.hpp  bench_ff.hpp  bench_kem.hpp  bench_kem_kyber.hpp  bench_kyber.hpp  bench_pke_kyber.hpp  x86_64_cpu_cycles.hpp
include/benchmarks/: bench_kem.hpp
include/kyber/: kyber1024_kem.hpp  kyber512_kem.hpp  kyber768_kem.hpp
include/kyber/internals/: k_pke.hpp  kem.hpp  ml_kem.hpp  pke.hpp
include/kyber/internals/math/: field.hpp
include/kyber/internals/poly/: compression.hpp  ntt.hpp  poly_vec.hpp  sampling.hpp  serialize.hpp
include/kyber/internals/rng/: prng.hpp
include/kyber/internals/utility/: params.hpp  utils.hpp
include/ml_kem/: ml_kem_1024.hpp  ml_kem_512.hpp  ml_kem_768.hpp
include/ml_kem/internals/: k_pke.hpp  ml_kem.hpp
include/ml_kem/internals/hashing/: blake3.hpp
include/ml_kem/internals/math/: field.hpp
include/ml_kem/internals/poly/: compression.hpp  ntt.hpp  poly_vec.hpp  sampling.hpp  serialize.hpp
include/ml_kem/internals/poly/sampling/: avx2.hpp  constexpr.hpp
include/ml_kem/internals/rng/: prng.hpp
include/ml_kem/internals/utility/: force_inline.hpp  params.hpp  utils.hpp
include/randomshake/: randomshake.hpp
include/test/: test_cca_kem.hpp  test_compression.hpp  test_cpa_pke.hpp  test_ff.hpp  test_field.hpp  test_kem.hpp  test_kem_kat.hpp  test_kyber.hpp  test_ntt.hpp  test_serialize.hpp
include/tests/: test_kem.hpp  test_kem_kat.hpp  test_ntt.hpp  test_serialize.hpp
kats/: kyber1024.kat  kyber512.kat  kyber768.kat  ml_kem_1024.kat  ml_kem_1024_decaps.acvp.kat  ml_kem_1024_decaps_key_check.acvp.kat  ml_kem_1024_encaps.acvp.kat  ml_kem_1024_encaps_key_check.acvp.kat  ml_kem_1024_keygen.acvp.kat  ml_kem_1024_pubkeyCheck.acvp.kat  ml_kem_512.kat  ml_kem_512_decaps.acvp.kat  ml_kem_512_encaps.acvp.kat  ml_kem_512_encaps_key_check.acvp.kat  ml_kem_512_keygen.acvp.kat  ml_kem_512_pubkeyCheck.acvp.kat  ml_kem_512_seckeyCheck.acvp.kat  ml_kem_768.acvp.kat  ml_kem_768.kat  ml_kem_768_decaps.acvp.kat  ml_kem_768_decaps_key_check.acvp.kat  ml_kem_768_encaps.acvp.kat  ml_kem_768_encaps_key_check.acvp.kat  ml_kem_768_pubkeyCheck.acvp.kat
kats/scripts/: parse_ml_kem_decaps_acvp_kat.py  parse_ml_kem_decaps_key_check_acvp_kat.py  parse_ml_kem_encaps_acvp_kat.py  parse_ml_kem_encaps_key_check_acvp_kat.py  parse_ml_kem_keygen_acvp_kat.py  parse_ml_kem_pubkeyCheck_acvp_kat.py  parse_ml_kem_seckeyCheck_acvp_kat.py  sync_acvp_kats.sh
scripts/: fuzz_all.sh
test/: main.cpp
tests/: main.cpp  test.mk  test_compression.cpp  test_field.cpp  test_helper.hpp  test_kem.cpp  test_kem_kat.cpp  test_ml_kem.cpp  test_ml_kem_1024.cpp  test_ml_kem_1024_encaps_acvp_kat.cpp  test_ml_kem_1024_kat.cpp  test_ml_kem_1024_keygen_acvp_kat.cpp  test_ml_kem_1024_seckeyCheck_acvp_kat.cpp  test_ml_kem_512.cpp  test_ml_kem_512_encaps_acvp_kat.cpp  test_ml_kem_512_kat.cpp  test_ml_kem_512_keygen_acvp_kat.cpp  test_ml_kem_512_seckeyCheck_acvp_kat.cpp  test_ml_kem_768.cpp  test_ml_kem_768_encaps_acvp_kat.cpp  test_ml_kem_768_kat.cpp  test_ml_kem_768_keygen_acvp_kat.cpp  test_ml_kem_768_seckeyCheck_acvp_kat.cpp  test_ml_kem_kat.cpp  test_ntt.cpp  test_serialize.cpp
tests/dudect/: test_kem.hpp  test_kyber1024_kem.cpp  test_kyber512_kem.cpp  test_kyber512_kem_internals.cpp  test_kyber512_keygen.cpp  test_kyber512_sampling.cpp  test_kyber768_kem.cpp  test_ml_kem_1024.cpp  test_ml_kem_512.cpp  test_ml_kem_768.cpp  test_runner.cpp
tests/fuzz/: field_arithmetic.cpp  fuzz_decaps.cpp  ml_kem_decaps.cpp  ml_kem_encaps.cpp  ml_kem_keygen.cpp  poly_compression.cpp  poly_ntt.cpp  poly_sampling.cpp  poly_serialize.cpp
tests/kat/: test_ml_kem_1024.cpp  test_ml_kem_1024_kat.cpp  test_ml_kem_512.cpp  test_ml_kem_512_kat.cpp  test_ml_kem_768.cpp
tests/prop/: test_compression.cpp  test_constexpr.cpp  test_field.cpp  test_ml_kem_1024.cpp  test_ml_kem_512.cpp  test_ml_kem_768.cpp  test_serialize.cpp
wrapper/: kyber_kem.cpp
wrapper/python/: kyber_kem.py  requirements.txt  test_kyber_kem.py
